Task-49372: Fix draft visibility for other users different than the author and add new template

--- a/webapp/src/main/webapp/skin/less/news.less
+++ b/webapp/src/main/webapp/skin/less/news.less
@@ -536,24 +536,6 @@
   }
 }
 
-.newsComposer{
-  #form_msg_error{
-    margin-left: 13px ~'; /** orientation=lt */ ';
-    margin-right: 13px ~'; /** orientation=rt */ ';
-    i.uiIconColorError.pull-left{
-      top: 10px;
-    }
-    .msg_error{
-      display: grid;
-      .msg_permission_denied{
-        font-weight: bold;
-      }
-
-    }
-
-  }
-
-}
 .newsComposer {
   display: flex;
   position: fixed;
@@ -948,6 +930,22 @@
 
     .v-navigation-drawer {
       z-index: 20;
+    }
+
+    .articleNotFound {
+      .iconNotFound {
+        background: url("@{images-path}/notfound.png") no-repeat center top;
+        display: block;
+        height: 85px;
+        margin: 3% auto;
+        text-align: center;
+        width: 160px;
+      }
+
+      h3 {
+        text-align: center;
+        color: @textLightColor;
+      }
     }
 }
 
